# robot_demo

./: .editorconfig  .env  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  Readme.md  docker-compose.yaml  google.resource  justfile  pyproject.toml  requirements.txt  resource_google.robot  robot_extension.py  run.py  test.robot
.libspecs/: Fakerlibrary.libspec  RequestsLibrary.libspec  SeleniumLibrary.libspec
demo/env/: enviroment.yaml
demo/resource/: api.resource  general.resource  general.robot  google.resource
demo/resource/extensions/: robot_extension.py
demo/test/01_basic/: 01_basic.robot  02_context_managers.robot  04_templates.robot
demo/test/01_basic/03_share_variables/: 01_share_variables.robot  02_share_variables.robot
demo/test/02_api/: 01_api.robot  api.robot  variables.yaml
demo/test/03_google/: 01_google.robot  google.robot
selenium_hub/: README.md  docker-compose.yaml
