[tool.poetry]
name = "robot_demo"
version = "0.1.0"
description = ""
authors = ["Szegedi Ádám <aszegedi@grepton.hu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
robotframework = "^3.1"
robotframework-seleniumlibrary = "^3.3"
robotframework-faker = "^4.2"
robotframework-requests = "^0.5.0"
pyyaml = "^5.1"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
